--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo-titulo"> Explore meu portfólio e minha jornada inicial <strong class="destaque-titulo"> no Front-end</strong></h1>
-            <p class="apresentacao__conteudo-paragrafo">Olá! Sou Débora Cristina, estou dando meus primeiros passos no mundo do desenvolvimento front-end e aprimorando minhas habilidades de tecnologias essenciais como HTML, CSS e Flexbox.</p>
+            <p class="apresentacao__conteudo-paragrafo">Olá! Sou Débora Cristina, estou dando meus primeiros passos no mundo do desenvolvimento front-end e aprimorando minhas habilidades em tecnologias essenciais como HTML, CSS e Flexbox.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links-subtitulo">Acesse minhas redes</h2>
                 <button class="apresentacao__links-navegacao">
@@ -41,7 +41,7 @@
         <img class="apresentacao__foto" src="./assets/perfil.jpg" alt="Foto da Debora">
     </main>
     <footer class="rodape">
-        <p >Desevolvido por Débora Cristina</p>
+        <p >Desenvolvido por Débora Cristina</p>
     </footer>
 </body>
 
