--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <img class="apresentacao__foto" src="./assets/perfil3.jpg" alt="Foto da joana programando">
     </main>
     <footer class="rodape">
-        <p class="rodape__texto">Dsenvolvido por Débora Cristina</h3>
+        <p class="rodape__texto">Desenvolvido por Débora Cristina</h3>
     </footer>
 </body>
 </html>
