--- a/curriculo.html
+++ b/curriculo.html
@@ -54,6 +54,7 @@
                         <li>HTML e CSS: Classes, posicionamento e flexbox</li>
                         <li>HTML e CSS: cabeçalho, footer e variáveis CSS</li>
                         <li>AWS Cloud Fundations</li>
+                        <li>Introdução à Cibersegurança - FacSenac-DF</li>
                     </ul>
                 </div> 
                 <div class="curriculo__dados-pessoais">
